src/objects/ADvendio__InvoicePreference__c.object
<CustomObject>
    <description>This object stores generic templates with all settings to generate your invoice PDFs.  Make sure that always one record is active to use the &quot;create invoice document&quot; feature. With this template, you may adjust the default elements and values and add new elements and values.</description>
    <fields>
        <fullName>ADvendio__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Please make sure that always only one record is active. If checked, this record will be used in Invoice Generator.</description>
        <inlineHelpText>If checked, this record will be used in Invoice Generator.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__AddressBlock1stPage__c</fullName>
        <label>Address Block (1st Page)</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ADvendio__ColorCodeTableHeader__c</fullName>
        <description>Please insert the background color for your table headers in Hex Format if desired. Example: #C6CEE2.</description>
        <label>Color Hex Code (Table Header)</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__ColorCode__c</fullName>
        <defaultValue>&quot;#C6CEE2&quot;</defaultValue>
        <description>Please insert a background color for your entire invoice in Hex Format if desired. Example: #C6CEE2.</description>
        <label>Color Hex Code (Background)</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__ContactInformation2ndPage__c</fullName>
        <label>Contact Information (2nd Page)</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ADvendio__Creative__c</fullName>
        <label>Creative</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__FirstPageAddressInformation__c</fullName>
        <description>Please enter the API-Name of a CustomLabel. The value will be displayed on the first page at the Invoice-PDF. If not defined, the default Custom Label with name &quot;First_page_my_address_BA&quot; will be used.</description>
        <inlineHelpText>Please enter the API-Name of a CustomLabel. The value will be displayed on the first page at the Invoice-PDF. If not defined, the default Custom Label with name &quot;First_page_my_address_BA&quot; will be used.</inlineHelpText>
        <label>First Page Address Information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__FooterFullSizeData__c</fullName>
        <description>Stores the API-Name of a CustomLabel. The value of CustomLabel will be displayed on the footer
full width on the Invoice-PDF.

If not defined, the ADvendio standard CustomLabel with name &quot;Footer_additional_information_BA&quot; will be used.</description>
        <inlineHelpText>Please enter the API-Name of a CustomLabel. The value of CustomLabel will be displayed on the footer full width on the Invoice-PDF.

If not defined, the ADvendio standard CustomLabel with name &quot;Footer_additional_information_BA&quot; will be used.</inlineHelpText>
        <label>Footer Full Size Data</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__FooterLeftSideData__c</fullName>
        <description>Stores the API-Name of a CustomLabel. The value of CustomLabel will be displayed on the left side of footer of Invoice-PDF.

If not defined, the ADvendio standard CustomLabel with name &quot;Invoice_Footer_left_side_BA&quot; will be used.</description>
        <inlineHelpText>Please enter the API-Name of a CustomLabel. The value of CustomLabel will be displayed on the left side of footer of Invoice-PDF.

If not defined, the ADvendio standard CustomLabel with name &quot;Invoice_Footer_left_side_BA&quot; will be used.</inlineHelpText>
        <label>Footer Left Side Data</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__FooterMiddleData__c</fullName>
        <description>Stores the API-Name of a CustomLabel to use. The value of CustomLabel will be displayed on the middle of footer of Invoicde-PDF.

If not defined, the ADvendio standard CustomLabel with name &quot;Invoice_Footer_middle_BA&quot; will be used.</description>
        <inlineHelpText>Please enter the API-Name of a CustomLabel to use. The value of CustomLabel will be displayed on the middle of footer of Invoicde-PDF.

If not defined, the ADvendio standard CustomLabel with name &quot;Invoice_Footer_middle_BA&quot; will be used.</inlineHelpText>
        <label>Footer Middle Data</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__FooterRightSideData__c</fullName>
        <description>Stores the API-Name of a CustomLabel. The value of CustomLabel will be displayed on the right side of footer of Invoice-PDF.

If not defined, the ADvendio standard CustomLabel with name &quot;Invoice_Footer_right_side_BA&quot; will be used.</description>
        <inlineHelpText>Please enter the API-Name of a CustomLabel. The value of CustomLabel will be displayed on the right side of footer of Invoice-PDF.

If not defined, the ADvendio standard CustomLabel with name &quot;Invoice_Footer_right_side_BA&quot; will be used.</inlineHelpText>
        <label>Footer Right Side Data</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__Footer__c</fullName>
        <label>Footer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__HiddenPackageComponentFields__c</fullName>
        <description>A newline-separated list of fields which are not displayed for package components.</description>
        <inlineHelpText>A newline-separated list of fields which are not displayed for package components.</inlineHelpText>
        <label>Hide Package Component Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ADvendio__HideAddFees__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked the additional fees are not printed on the summary page.</description>
        <label>Hide additional fees</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__HideBoxNotesAlways__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked the Notes are not printed on the summary page.</description>
        <label>Hide Notes Box - always</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__HideBoxNotesNull__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked the Notes box is not printed on the summary page if empty.</description>
        <label>Hide Notes Box - only if empty</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__HideBoxTechnicalSpecifications__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked the Technical Specifications are not printed on the summary page.</description>
        <label>Hide Box (Technical Specifications)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__HideInfoTable1stPage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked the information table on the cover letter (1.Page) is not shown.</description>
        <label>Hide Info Table (Cover Letter)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__HidePackageComponentDetails__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked detailed information about package components will not be displayed.</description>
        <inlineHelpText>If checked detailed information about package components will not be displayed.</inlineHelpText>
        <label>Hide Package Component Details</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__InfoTableCoverLetter__c</fullName>
        <description>This field defines the information table that is displayed on the cover letter of the PDF and in which order the information is displayed.</description>
        <inlineHelpText>Please customize the information table on the cover letter of the PDF and in which order the information is displayed or use the ADvendio default.</inlineHelpText>
        <label>Info Table (Cover Letter)</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ADvendio__LeftHeaderImageOnlyOnFirstPage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Displays the selected Left Header Image only on the cover letter of the invoice.</description>
        <label>Left Header Image only on Cover Letter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__LeftHeaderImageSource__c</fullName>
        <description>Please reference the Salesforce path of the the custom rich text field which stores the image to be displayed. Example: ADvendio__Agency__r.Logo__c.</description>
        <label>Left Header Image Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__LogoImage__c</fullName>
        <description>Previews the selected company logo.</description>
        <formula>IF(ADvendio__Logo__c &lt;&gt;&apos;&apos;, IMAGE(&apos;/servlet/servlet.FileDownload?file=&apos;+ADvendio__Logo__c, &apos;Logo&apos; ,50,70) ,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Logo Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__LogoName__c</fullName>
        <description>Automatically gets populated with the Logo file name once the user selects an image.</description>
        <label>Logo file name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__Logo__c</fullName>
        <description>This field is used to store the path to the uploaded logo. Displays the Salesforce ID of your selected logo file.</description>
        <label>Logo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__RightHeaderImageSource__c</fullName>
        <description>Please reference the Salesforce path of the the custom rich text field which stores the image to be displayed. Example: ADvendio__Agency__r.Logo__c.</description>
        <label>Right Header Image Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__Show1stPage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected, the first page which summarizes all information of the the invoice is displayed and created - (Cover letter)</description>
        <label>Show Cover Letter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__ShowDiscountedCampaignCosts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show dis. Campaign Costs (deprecated)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__ShowFooter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Footer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__ShowGrossCampaignCost__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked the Gross Amount is shown on cover letter and summarization on page 3.</description>
        <label>Show Gross Campaign Cost</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__ShowLeftHeaderImageOnCNCancellation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Displays the selected Left Header Image if invoice type is a Credit Note Cancellation.</description>
        <label>Show Left Header Image (CN Cancellation)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__ShowLeftHeaderImageOnCancellation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Displays the selected Left Header Image if invoice type is a Cancellation.</description>
        <label>Show Left Header Image on Cancellation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__ShowLeftHeaderImageOnCreditNote__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Displays the selected Left Header Image if invoice type is a Credit Note.</description>
        <label>Show Left Header Image on Credit Note</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__ShowLeftHeaderImageOnInvoice__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Displays the selected Left Header Image if invoice type is of invoice.</description>
        <label>Show Left Header Image on Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__ShowLogo__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked the company logo is inserted into the invoice document.</description>
        <label>Show Logo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__ShowNetCampaignCosts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Net Campaign Costs (deprecated)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__ShowPaymentTerms__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Payment Terms</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__ShowSignatureBlockOnCNCancellation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Displays the signature block if Invoice type is a Credit Note  Cancellation.</description>
        <label>Show Signature Block (CN Cancellation)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__ShowSignatureBlockOnCancellation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Displays the signature block if Invoice type is a Cancellation.</description>
        <label>Show Signature Block on Cancellation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__ShowSignatureBlockOnCreditNote__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Displays the signature block if Invoice type is a Credit Note.</description>
        <label>Show Signature Block on Credit Note</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__ShowSignatureBlockOnInvoice__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Displays the signature block if Invoice type is an Invoice.</description>
        <label>Show Signature Block on Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__ShowTitle__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Title</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__TermsAndConditions__c</fullName>
        <label>Terms and Conditions</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ADvendio__Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__VolumeScalesOfDiscount__c</fullName>
        <description>Please enter a line-separated list i.e.: 
(Amount, Percentage
Amount 2, Percentage 2 ...). 

This scale will be shown on the invoice document.</description>
        <inlineHelpText>Please enter your information like the following: (Amount, Percentage)</inlineHelpText>
        <label>Volume discount scale</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>P7S1_IdOld__c</fullName>
        <description>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</description>
        <inlineHelpText>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</inlineHelpText>
        <label>P7S1_IdOld</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Invoice Preference</label>
    <listViews>
        <fullName>ADvendio__All</fullName>
        <columns>NAME</columns>
        <columns>ADvendio__Active__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>ADvendio__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>ADvendio__AllInvPref</fullName>
        <columns>NAME</columns>
        <columns>ADvendio__Active__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Invoice Preference Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoice Preferences</pluralLabel>
    <recordTypes>
        <fullName>ADvendio__Invoice_Layout_1</fullName>
        <active>true</active>
        <description>Invoice layout in generic portrait format</description>
        <label>Generic portrait format (deprecated)</label>
    </recordTypes>
    <recordTypes>
        <fullName>ADvendio__Standard_Invoice</fullName>
        <active>true</active>
        <description>Invoice layout in German OVK standard</description>
        <label>German standard layout (OVK) (deprecated)</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>